# LL-SVM

./: .gitattributes  README.md  algorithm_compute.py  core_algorithm.py  load_datasets.py  local_coding.py  logging_conf.py  main.py  pyproject.toml  requirements.txt
datasets/banana/: banana.csv
datasets/letter/: emnist-letters-test-images-idx3-ubyte  emnist-letters-test-labels-idx1-ubyte  emnist-letters-train-images-idx3-ubyte  emnist-letters-train-labels-idx1-ubyte  letter.csv
datasets/usps/: usps  usps.h5  usps.t
