[tool.poetry]
name = "ll-svm"
version = "0.1.0"
description = "Code of \"In Proceedings of the 28th International Conference on Machine Learning\""
authors = ["phidiaLam <2957035701@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
contourpy = "1.2.0"
cycler = "0.12.1"
cython = "3.0.5"
fonttools = "4.44.0"
h5py = "3.10.0"
joblib = "1.3.2"
kiwisolver = "1.4.5"
matplotlib = "3.8.1"
mlpack = "4.2.1"
opencv-python = "4.8.1.78"
packaging = "23.2"
patsy = "0.5.3"
pillow = "10.1.0"
pyparsing = "3.1.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
scikit-learn = "1.3.2"
six = "1.16.0"
statsmodels = "0.14.0"
threadpoolctl = "3.2.0"
tzdata = "2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
